[gd_scene load_steps=26 format=3 uid="uid://lqtollaovard"]

[ext_resource type="Script" uid="uid://b4ytavk038x8p" path="res://src/base_level.gd" id="1_mnxva"]
[ext_resource type="PackedScene" uid="uid://b58peuo4bsbio" path="res://src/systems/character/character_portrait.tscn" id="2_82ww6"]
[ext_resource type="PackedScene" uid="uid://dij6fum0ibnv8" path="res://src/systems/day/shutter/shutter.tscn" id="2_a04hb"]
[ext_resource type="Texture2D" uid="uid://b3mh0jkshlp05" path="res://assets/gfx/workspace/environmentBack.png" id="2_ofrd7"]
[ext_resource type="Texture2D" uid="uid://d2j5w4j038gdq" path="res://assets/gfx/workspace/OfficeBG.png" id="3_m2fog"]
[ext_resource type="Texture2D" uid="uid://q5dj3luw28xw" path="res://assets/gfx/workspace/deskmanual.png" id="4_m2fog"]
[ext_resource type="Texture2D" uid="uid://juk8sp28gjxb" path="res://assets/gfx/workspace/TodaysList.png" id="5_m2fog"]
[ext_resource type="Texture2D" uid="uid://cxmc7n8ua84nb" path="res://assets/gfx/workspace/Desk_Passport.png" id="6_m2fog"]
[ext_resource type="Texture2D" uid="uid://covudcrjxgy4v" path="res://assets/gfx/workspace/DeskStamp_Revive.png" id="8_m2fog"]
[ext_resource type="Texture2D" uid="uid://bacn44qbvx7c0" path="res://assets/gfx/workspace/DeskStamp_Heaven.png" id="9_a04hb"]
[ext_resource type="Texture2D" uid="uid://bfdc5x2ca6o72" path="res://assets/gfx/workspace/DeskStamp_Reincarnate.png" id="10_ofrd7"]
[ext_resource type="Texture2D" uid="uid://kb1bldjhq722" path="res://assets/gfx/workspace/DeskStamp_Purgatory.png" id="11_f5raj"]
[ext_resource type="Texture2D" uid="uid://dykwqxu53uj5j" path="res://assets/gfx/workspace/DeskStamp_Hell.png" id="12_00nxg"]
[ext_resource type="PackedScene" uid="uid://j4hf2qioo8lp" path="res://src/ui/board.tscn" id="14_ofrd7"]
[ext_resource type="PackedScene" uid="uid://c5pd6lnbms1ig" path="res://src/ui/clock.tscn" id="15_f5raj"]
[ext_resource type="PackedScene" uid="uid://bq81larsu30jg" path="res://src/ui/summary_board.tscn" id="16_00nxg"]
[ext_resource type="PackedScene" uid="uid://dgl2xgwk2ierl" path="res://src/ui/desk_plaque.tscn" id="17_f6fmg"]
[ext_resource type="AudioStream" uid="uid://djpcxe2bnufbt" path="res://assets/sfx/Whoosh_list_1.wav" id="18_1cuma"]
[ext_resource type="AudioStream" uid="uid://wki1e08oxscl" path="res://assets/sfx/Whoosh_list_2.wav" id="19_owwft"]
[ext_resource type="AudioStream" uid="uid://c0x7l43c8yhk1" path="res://assets/sfx/Whoosh_list_3.wav" id="20_0aw8o"]
[ext_resource type="AudioStream" uid="uid://bntiloj812gn5" path="res://assets/sfx/Whoosh_passport_1.wav" id="21_8u1h0"]
[ext_resource type="AudioStream" uid="uid://cs53lrbn7emas" path="res://assets/sfx/Whoosh_passport_2.wav" id="22_20r1y"]
[ext_resource type="AudioStream" uid="uid://dv38kqy752m4t" path="res://assets/sfx/Whoosh_passport_3.wav" id="23_cwwvc"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8u1h0"]
streams_count = 3
stream_0/stream = ExtResource("18_1cuma")
stream_1/stream = ExtResource("19_owwft")
stream_2/stream = ExtResource("20_0aw8o")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pgi23"]
streams_count = 3
stream_0/stream = ExtResource("21_8u1h0")
stream_1/stream = ExtResource("22_20r1y")
stream_2/stream = ExtResource("23_cwwvc")

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_mnxva")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_ofrd7")
metadata/_edit_lock_ = true

[node name="Shutter" parent="." instance=ExtResource("2_a04hb")]
position = Vector2(955, 399)

[node name="CharacterPortrait" parent="." instance=ExtResource("2_82ww6")]
unique_name_in_owner = true
position = Vector2(967.00006, 438.00003)
scale = Vector2(0.65, 0.65)

[node name="Background2" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_m2fog")
metadata/_edit_lock_ = true

[node name="ManualButton" type="TextureButton" parent="."]
offset_left = 1362.0
offset_top = 755.0
offset_right = 1912.0
offset_bottom = 1084.0
texture_normal = ExtResource("4_m2fog")
texture_pressed = ExtResource("4_m2fog")
texture_hover = ExtResource("4_m2fog")
texture_disabled = ExtResource("4_m2fog")
metadata/_edit_use_anchors_ = true

[node name="ScheduledDeathsButton" type="TextureButton" parent="."]
offset_left = 125.0
offset_top = 243.0
offset_right = 380.0
offset_bottom = 572.0
texture_normal = ExtResource("5_m2fog")
texture_pressed = ExtResource("5_m2fog")
texture_hover = ExtResource("5_m2fog")
texture_disabled = ExtResource("5_m2fog")
metadata/_edit_use_anchors_ = true

[node name="PassportButton" type="TextureButton" parent="."]
unique_name_in_owner = true
offset_left = 725.0
offset_top = 746.0
offset_right = 1208.0
offset_bottom = 1075.0
texture_normal = ExtResource("6_m2fog")
texture_pressed = ExtResource("6_m2fog")
texture_hover = ExtResource("6_m2fog")
texture_disabled = ExtResource("6_m2fog")
metadata/_edit_use_anchors_ = true

[node name="ReturnStamp" type="TextureButton" parent="."]
offset_left = 18.0
offset_top = 642.0
offset_right = 124.0
offset_bottom = 832.0
texture_normal = ExtResource("8_m2fog")
texture_pressed = ExtResource("8_m2fog")
texture_hover = ExtResource("8_m2fog")
texture_disabled = ExtResource("8_m2fog")
metadata/_edit_use_anchors_ = true

[node name="HeavenStamp" type="TextureButton" parent="."]
offset_left = 120.0
offset_top = 644.0
offset_right = 228.0
offset_bottom = 834.0
texture_normal = ExtResource("9_a04hb")
texture_pressed = ExtResource("9_a04hb")
texture_hover = ExtResource("9_a04hb")
texture_disabled = ExtResource("9_a04hb")
metadata/_edit_use_anchors_ = true

[node name="ReincarnationStamp" type="TextureButton" parent="."]
offset_left = 230.0
offset_top = 666.0
offset_right = 310.0
offset_bottom = 836.0
texture_normal = ExtResource("10_ofrd7")
texture_pressed = ExtResource("10_ofrd7")
texture_hover = ExtResource("10_ofrd7")
texture_disabled = ExtResource("10_ofrd7")
metadata/_edit_use_anchors_ = true

[node name="PurgatoryStamp" type="TextureButton" parent="."]
offset_left = 309.0
offset_top = 693.0
offset_right = 446.0
offset_bottom = 834.0
texture_normal = ExtResource("11_f5raj")
texture_pressed = ExtResource("11_f5raj")
texture_hover = ExtResource("11_f5raj")
texture_disabled = ExtResource("11_f5raj")
metadata/_edit_use_anchors_ = true

[node name="HellStamp" type="TextureButton" parent="."]
offset_left = 438.0
offset_top = 641.0
offset_right = 527.0
offset_bottom = 834.0
texture_normal = ExtResource("12_00nxg")
texture_pressed = ExtResource("12_00nxg")
texture_hover = ExtResource("12_00nxg")
texture_disabled = ExtResource("12_00nxg")
metadata/_edit_use_anchors_ = true

[node name="Board" parent="." instance=ExtResource("14_ofrd7")]
offset_left = 1436.0
offset_top = 306.0
offset_right = 1436.0
offset_bottom = 306.0

[node name="Clock" parent="." instance=ExtResource("15_f5raj")]
offset_left = 1554.0
offset_top = 62.0
offset_right = 1554.0
offset_bottom = 62.0
total_time = 30.0

[node name="SummaryBoard" parent="." instance=ExtResource("16_00nxg")]
visible = false
offset_left = 998.0
offset_top = 512.0
offset_right = 998.0
offset_bottom = 512.0

[node name="DeskPlaque" parent="." instance=ExtResource("17_f6fmg")]
offset_left = 52.0
offset_top = 36.0
offset_right = 498.0
offset_bottom = 230.0

[node name="sfx" type="Node" parent="."]

[node name="ListSfx" type="AudioStreamPlayer" parent="sfx"]
stream = SubResource("AudioStreamRandomizer_8u1h0")

[node name="PassportSfx" type="AudioStreamPlayer" parent="sfx"]
stream = SubResource("AudioStreamRandomizer_pgi23")

[connection signal="pressed" from="ManualButton" to="." method="_on_manual_button_pressed"]
[connection signal="pressed" from="ScheduledDeathsButton" to="." method="_on_scheduled_deaths_button_pressed"]
[connection signal="pressed" from="PassportButton" to="." method="_on_passport_button_pressed"]
[connection signal="pressed" from="ReturnStamp" to="." method="_on_return_stamp_pressed"]
[connection signal="pressed" from="HeavenStamp" to="." method="_on_heaven_stamp_pressed"]
[connection signal="pressed" from="ReincarnationStamp" to="." method="_on_reincarnation_stamp_pressed"]
[connection signal="pressed" from="PurgatoryStamp" to="." method="_on_purgatory_stamp_pressed"]
[connection signal="pressed" from="HellStamp" to="." method="_on_hell_stamp_pressed"]
[connection signal="timeout" from="Clock" to="." method="_on_clock_timeout"]
